--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -114,7 +114,7 @@
       
       
       {% if request.user.is_authenticated %}
-          <h4 class="dropdown-header">Bonjour {{ request.user.first_name }} {{ request.user.last_name }}</h3>
+          <h3 class="dropdown-header" style="margin-top:10px;">Bonjour {{ request.user.first_name }} {{ request.user.last_name }}</h3>
            
           
 
@@ -129,9 +129,31 @@
           </div>
           </a>
 
-          <div class="dropdown-divider"></div>
-       
+         
 
+          {% else %}
+          <h3 class="dropdown-header" style="margin-top:10px;">  
+            <div class="d-flex justify-content-between">
+              <div>Connexion</div>
+              <div><img src="{% static "admin/img/opticons/key.svg" %}" alt="hello"></div>
+            </div>
+          </h3>
+        <a class="dropdown-item" href="/org">
+          <div class="" id="connexion">
+              Connexion (polytechnique.org)
+          </div>
+        </a>
+
+
+        <a class="dropdown-item" href="{% url 'login' %}?next={% url 'index' %}">
+          <div class="" id="connexion">
+              Connexion manuelle
+          </div>
+        </a>
+
+      {% endif %}
+       
+          <div class="dropdown-divider"></div>
           <h3 class="dropdown-header"> <span class="glyphicon glyphicon-option-vertical" ></span>Menu</h3>
 
           <a href="{% url 'index'  %}" class="dropdown-item">
@@ -195,6 +217,7 @@
           </div>
           </a>
 
+          {% if request.user.is_authenticated %}
           <div class="dropdown-divider"></div>
 
           <h3 class="dropdown-header"> Projections épinglées</h3>
@@ -234,30 +257,10 @@
           </span>
 
 
+          {% endif %}
 
 
 
-      {% else %}
-          <h3 class="dropdown-header">  
-            <div class="d-flex justify-content-between">
-              <div>Connexion</div>
-              <div><img src="{% static "admin/img/opticons/key.svg" %}" alt="hello"></div>
-            </div>
-          </h3>
-        <a class="dropdown-item" href="/org">
-          <div class="" id="connexion">
-              Connexion (polytechnique.org)
-          </div>
-        </a>
-
-
-        <a class="dropdown-item" href="{% url 'login' %}?next={% url 'index' %}">
-          <div class="" id="connexion">
-              Connexion manuelle
-          </div>
-        </a>
-
-      {% endif %}
 
 
 
