redesign de la recherche

--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -77,7 +77,7 @@
           </a>
 
           <div id="search_bar" class="" style="width:100%;max-width:600px;">
-              <form method="get" class="form-inline" action="search/">
+              <form method="get" class="form-inline" action="/search/">
                 <input autocomplete="off" id="search_input" placeholder="Rechercher" onblur="cacher_results()" 
                 onfocus="afficher_results()" name="q" class="form-control m-2 " onkeydown="select_lien(event)" 
                 onkeyup="showHint(event,this.value)" type="text" style="width:100%;min-width:0px;"
