--- a/videos/templates/search.html
+++ b/videos/templates/search.html
@@ -28,7 +28,7 @@
 
 						{% if elements_auteurs %}
 						<li class="nav-item " >
-							<a class="nav-link 	{% if not elements_proj%} {% if not element_vid %} active {% endif %} {% endif %}" href="#affiche_auteurs" data-toggle="tab"  role="tab">JTXWOMEN.MEN	</a>
+							<a class="nav-link 	{% if not elements_proj%} {% if not elements_vid %} active {% endif %} {% endif %}" href="#affiche_auteurs" data-toggle="tab"  role="tab">JTXWOMEN.MEN	</a>
 						</li>
 						{% endif %}
 
