--- a/videos/templates/index.html
+++ b/videos/templates/index.html
@@ -16,6 +16,8 @@
 
 		{% endif %}
 
+        <h1>{{n_videos}} en ligne, pour {{duree}} heures !</h1>
+
 {% if request.user.is_authenticated %}
 		<div class="d-flex flex-wrap">
 		
