--- a/videos/templates/search.html
+++ b/videos/templates/search.html
@@ -130,7 +130,7 @@
 
 
 					{% if elements_auteurs %}
-					<div class="tab-pane fade show {% if not elements_proj%} {% if not element_vid %} active {% endif %} {% endif %}" id="affiche_auteurs">
+					<div class="tab-pane fade show {% if not elements_proj%} {% if not elements_vid %} active {% endif %} {% endif %}" id="affiche_auteurs">
 						{% for a in elements_auteurs %}
 							<div style="margin-bottom:5px;">
 								<div class="d-flex align-items-center">
