--- a/videos/templates/video.html
+++ b/videos/templates/video.html
@@ -24,8 +24,8 @@
       <div class=" col-12 d-flex  justify-content-between align-items-start" style="padding:0;">
         <h3>{{ video.titre }} </h3>
         <!-- <div class="btn-group" data-toggle="buttons">
-            <a href="#" id="btn_sd" class="btn btn-secondary btn-sm " onclick="tosd('{{video.md}}')">SD</a>
-            <a href="#" id="btn_hd" class="btn btn-success btn-sm" onclick="tohd('{{video.hd}}')">HD</a>
+            <a href="#" id="btn_sd" class="btn btn-secondary btn-sm " onclick="tosd(\"{{video.md}}\")">SD</a>
+            <a href="#" id="btn_hd" class="btn btn-success btn-sm" onclick="tohd(\"{{video.hd}}\")">HD</a>
         </div> -->
 
         <div class="btn-group" data-toggle="buttons">
@@ -211,7 +211,7 @@
 
     <div class="col-12 shadow-div" style="background-color:white;padding:10px;margin-top:10px;">
       <div class="titre_et_vues_date">Ajoutée le {{ video.date|date:"d/m/Y" }}.</div>
-      {{ video.description }}
+      <span style ="white-space: pre-wrap;">{{ video.description }}</span>
     </div>
 
 
