--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -93,14 +93,30 @@
           <!-- <div id="txtHint" onmouseover="lien_ok(1)" onmouseout="lien_ok(0)" style="margin-left: 221.067px;"> -->
           <!-- </div> -->
 
-          <a class="ml-auto btn btn-primary m-1 d-none d-md-block" href="https://docs.google.com/forms/u/0/d/e/1FAIpQLScnWrGA33Z6HbHlhkl-g0sqKDzbGaz16Yd0MVAl8hHbbWc_5g/viewform?usp=sf_link" target="_newtab">
-            
-              Signaler un bug\Proposer une suggestion
-          </a>
+         
 
-          <a class="ml-auto btn btn-primary m-1 d-block d-xs-block d-md-none" href="https://docs.google.com/forms/u/0/d/e/1FAIpQLScnWrGA33Z6HbHlhkl-g0sqKDzbGaz16Yd0MVAl8hHbbWc_5g/viewform?usp=sf_link" target="_newtab">
-              Bug
-          </a>
+         
+          {% if request.user.is_authenticated %}
+
+          <a class="ml-auto m-1" href="{% url 'logout' %}">
+            <button type="button" class="btn btn-danger btn-sm">
+                {{request.user.first_name}}
+                {{request.user.last_name}}
+            <span class="badge " style="margin-left:2px;"><img src="{% static "admin/img/opticons/sign-out.svg" %}" alt="hello" > </span>
+          </button>
+        </a>
+            
+         
+
+
+          {% else %}
+            <a class="ml-auto m-1" href="/org">
+                <button type="button" class="btn btn-primary btn-sm">
+                Se connecter
+                <span class="badge badge-light" style="margin-left:7px;"><img src="{% static "admin/img/opticons/person.svg" %}" alt="hello" > </span>
+              </button>
+            </a>
+          {% endif %}
 
         </div>
 
@@ -117,22 +133,25 @@
           <h3 class="dropdown-header" style="margin-top:10px;">Bonjour {{ request.user.first_name }} {{ request.user.last_name }}</h3>
            
           
-
+<!-- 
           <a class="dropdown-item" href="{% url 'logout' %}">
               <div class="d-flex ">
                   
                   <div style='margin-right:5px;'><img src="{% static "admin/img/opticons/sign-out.svg" %}" alt="hello"></div>
             <div class="">
-              <!-- <img src={% static "admin/img/deconnexion.png" %} alt="->" style="width:10px;">  -->
+              
               Se déconnecter
             </div>
           </div>
-          </a>
+          </a> -->
 
          
 
           {% else %}
-          <h3 class="dropdown-header" style="margin-top:10px;">  
+          <div class="dropdown-header" style="margin-top:10px;">Connectez vous pour avoir <br> accès au site complet.</div>
+           
+
+          <!-- <h3 class="dropdown-header" style="margin-top:10px;">  
             <div class="d-flex justify-content-between">
               <div>Connexion</div>
               <div><img src="{% static "admin/img/opticons/key.svg" %}" alt="hello"></div>
@@ -149,7 +168,7 @@
           <div class="" id="connexion">
               Connexion manuelle
           </div>
-        </a>
+        </a> -->
 
       {% endif %}
        
@@ -256,9 +275,15 @@
             </span> {% endif %} {% endfor %}
           </span>
 
+          <div class="dropdown-divider"></div>
 
           {% endif %}
 
+
+          <a class="btn btn-primary m-1 d-none d-md-block" href="https://docs.google.com/forms/u/0/d/e/1FAIpQLScnWrGA33Z6HbHlhkl-g0sqKDzbGaz16Yd0MVAl8hHbbWc_5g/viewform?usp=sf_link" target="_newtab">
+            
+              Signaler un bug <br> Proposer une suggestion
+          </a>
 
 
 
