--- a/videos/templates/proj_new.html
+++ b/videos/templates/proj_new.html
@@ -513,6 +513,7 @@ function change_flux_to(qualite, from_strart='oui'){
     new_t.setAttribute('kind',"subtitles");
     new_t.setAttribute('srclang',"fr");
     new_t.setAttribute('id', "sub");
+    new_t.setAttribute('default', "");
     new_t.setAttribute('src', playlist[current][7]);
   }
   else{
