Ajout de fonctionnalités
Ajouts des playlists, des devises personnalisées pour le jtx

--- a/videos/templates/jtx.html
+++ b/videos/templates/jtx.html
@@ -6,7 +6,7 @@
 
 <div class="jumbotron" style="background-color:white;text-align:center;">
 		<h1 class="display-3">JTX {{year}}</h1>
-		<p class="lead">On intuite et on disrupte.</p>
+		<p class="lead">{{devise}}</p>
 		
 </div>
 
