--- a/videos/templates/index.html
+++ b/videos/templates/index.html
@@ -4,24 +4,23 @@
 
 {% load app_filters %}
 
-{% if not request.user.is_authenticated %}
-<div class="alert alert-danger alert-dismissible fade show" role="alert">
-<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-<span aria-hidden="true">&times;</span>
-  </button>
-	<h4><strong> Vous n'êtes pas connecté !</strong></h4>
-Connectez vous pour pouvoir voir toutes les vidéos, et accéder a toutes les fonctionnalités du site.
-Tant que vous n'êtes pas connecté, vous ne pouvez voir que les videos ouvertes au public.
-</div>
-
-{% endif %}
-
 <div class="jumbotron" style="background-color:white;">
 	<h1 class="display-3">Bienvenue sur le site du JTX!</h1>
 	<p class="lead">{{n_videos}} vidéos en ligne, {{duree}} heures de (relatif) fun.</p>
 	
   </div>
 
+		{% if not request.user.is_authenticated %}
+		<div class="alert alert-warning alert-dismissible fade show" role="alert">
+		<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    	<span aria-hidden="true">&times;</span>
+  		</button>
+			<h4><strong> Vous n'êtes pas connecté !</strong></h4>
+		Connectez vous pour pouvoir voir toutes les vidéos, et accéder a toutes les fonctionnalités du site.
+		Tant que vous n'êtes pas connecté, vous ne pouvez voir que les videos ouvertes au public.
+		</div>
+
+		{% endif %}
 
     
 
@@ -121,13 +120,11 @@ Tant que vous n'êtes pas connecté, vous ne pouvez voir que les videos ouvertes
 					</div>
 					<div class="d-block   d-sm-none">
 						<div class="row ">
-								{% for p in projs|dictsortreversed:'date' %}
+								{% for p in projs %}
 									{% include "block_video_proj_liste.html" with video=0 elmt=p horizontal=1%}
 								{% endfor %}
 						</div>
-						
 					</div>
-					<a class='btn btn-primary float-right' href="{% url 'projs'  1 %}">Voir plus</a>
 			</div>
 
 			{% for c in categories %}
@@ -153,7 +150,6 @@ Tant que vous n'êtes pas connecté, vous ne pouvez voir que les videos ouvertes
 										{% endfor %}
 								</div>
 							</div>
-							<a class='btn btn-primary float-right' href="{% url 'category' c.id 1 %}">Voir plus</a>
 				</div>
 
 			{% endfor %}
