Debugged and JTX 2015

--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -207,6 +207,16 @@
           </div>
           </a>
 
+          <a href="{% url 'jtx' 2015 %}" class="dropdown-item">
+              <div class="d-flex ">
+                  
+                  <div style='margin-right:5px;'><img src="{% static "admin/img/opticons/bookmark.svg" %}" alt="hello"></div>
+            <div class="">
+              JTX 2015
+            </div>
+          </div>
+          </a>
+
           <a href="{% url 'jtx' 2016 %}" class="dropdown-item">
               <div class="d-flex ">
                   
